fix: update color contrast to meet a11y

--- a/src/components/content/Icon/Icon.css
+++ b/src/components/content/Icon/Icon.css
@@ -33,4 +33,8 @@ locator-icon {
   &[color='negative'] {
     color: var(--theme-background-negative);
   }
+
+  &[color='white'] {
+    color: var(--color-white);
+  }
 }
